# sz_rust_encrypt_plugin

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  COMMIT_MESSAGE.txt  Cargo.toml  LICENSE  README.md  build.rs  cbindgen.toml  deny.toml
.github/workflows/: ci.yml  security.yml
examples/: CMakeLists.txt  c_usage_example.c  test_aes  test_aes_plugin.c  test_dummy  test_dummy_plugin.c  usage_example.rs
include/: sz_encrypt_plugin.h
src/: aes.rs  c_interface.rs  dummy.rs  encryption.rs  lib.rs
sz_aes_plugin/: Cargo.toml  README.md  build.rs
sz_aes_plugin/include/: sz_aes_encrypt_plugin.h
sz_aes_plugin/src/: aes_encryption.rs  c_interface.rs  lib.rs
sz_common/: Cargo.toml  README.md
sz_common/src/: c_interface_macro.rs  errors.rs  lib.rs  traits.rs  utils.rs
sz_dummy_plugin/: Cargo.toml  README.md  build.rs
sz_dummy_plugin/include/: sz_dummy_encrypt_plugin.h
sz_dummy_plugin/src/: c_interface.rs  dummy_encryption.rs  lib.rs
tests/: integration_tests.rs
