[workspace]
members = [
    "sz_common",
    "sz_aes_plugin",
    "sz_dummy_plugin"
]
resolver = "3"

[workspace.package]
rust-version = "1.85"
license = "Apache-2.0"

[workspace.dependencies]
sz_common = { path = "sz_common" }
aes = "0.8"
cbc = "0.1"
base64 = "0.22"
zeroize = "1.8"
thiserror = "2"
libc = "0.2"
proptest = "1.10"
