[package]
name = "sz_dummy_plugin"
version = "0.1.0"
edition = "2024"
license.workspace = true
rust-version.workspace = true
description = "Dummy XOR encryption plugin for Senzing (development/testing only)"

[lib]
name = "sz_dummy_encrypt_plugin"
crate-type = ["cdylib", "rlib"]

[dependencies]
sz_common = { workspace = true }
base64 = { workspace = true }
zeroize = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
